<resources>
    <string name="app_name" translatable="false">MQTT Home</string>
    <string name="host">Host</string>
    <string name="port">Port</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="use_tls">Use TLS</string>
    <string name="use_tls_summary">Don\'t forget to change port (if needed) when using TLS.</string>
    <string name="client_cert">"    Client certificate"</string>
    <string name="cert_password">"    Certificate password"</string>
    <string name="validate_certs">"    Validate certificates"</string>
    <string name="workspace_topic">Topic for saving elements</string>
    <string name="client_id">Client ID</string>
    <string name="connection_timeout">Connection timeout</string>
    <string name="keepalive_interval">Keep-alive interval</string>
    <string name="share_server_config">Share server configuration</string>
    <string name="share_server_config_summary">Generate a link that you can send it to your friends to easily grant them access to your server.</string>
    <string name="user_interface">User interface</string>
    <string name="connection">Connection</string>
    <string name="show_menu_dots">Show menu dots on widgets</string>
    <string name="show_menu_dots_summary">Disable this to hide menu icon from widgets. You can still long-click the widget to open the menu.</string>
    <string name="app_version">App version</string>
    <string name="configuration">Configuration</string>
    <string name="load_configuration">Load configuration</string>
    <string name="empty">Empty</string>
    <string name="title">Title</string>
    <string name="topic">Topic</string>
    <string name="retain">Retain</string>
    <string name="show_title">Show title</string>
    <string name="show_last_update">Show last update</string>
    <string name="width_portrait">Width (portrait)</string>
    <string name="width_landscape">Width (landscape)</string>
    <string name="items">Items</string>
    <string name="add">Add</string>
    <string name="display">Display</string>
    <string name="horizontal">Horizontal</string>
    <string name="vertical">Vertical</string>
    <string name="allow_transparent_colors">Allow transparent colors</string>
    <string name="app_settings">App settings</string>
    <string name="minimum_value">Minimum value</string>
    <string name="maximum_value">Maximum value</string>
    <string name="step">Step</string>
    <string name="on_value">On value</string>
    <string name="off_value">Off value</string>
    <string name="prefix">Prefix</string>
    <string name="suffix">Suffix</string>
    <string name="not_connected">You are not connected.</string>
    <string name="value">Value</string>
    <string name="action_add_item">Add item</string>
    <string name="action_reorder_items">Reorder items</string>
    <string name="action_settings">Settings</string>
    <string name="action_save">Save</string>
    <string name="status_no_config">No config</string>
    <string name="status_error">Error</string>
    <string name="status_offline">Offline</string>
    <string name="status_connecting">Connecting...</string>
    <string name="status_on_air">On air</string>
    <string name="create_new_item">Create new item</string>
    <string name="w_section">Section</string>
    <string name="w_text">Text</string>
    <string name="w_switch">Switch</string>
    <string name="w_graph">Graph</string>
    <string name="w_dropdown">Dropdown</string>
    <string name="w_color">Color</string>
    <string name="w_button">Button</string>
    <string name="w_slider">Slider</string>
    <string name="edit_widget_s">%s \"%s\"</string>
    <string name="create_widget_s">Create (%s)</string>
    <string name="field_required">This field is required.</string>
    <string name="action_move_back">Move back</string>
    <string name="action_move_forth">Move forth</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="create_section">Create section</string>
    <string name="section_s">Section \"%s\"</string>
    <string name="no_workspace_items">No workspace items defined.</string>
    <string name="none">(None)</string>
    <string name="t_just_now">just now</string>
    <string name="t_sec_ago">%d sec ago</string>
    <string name="t_min_ago">%d min ago</string>
    <string name="t_hours_ago">%d hours ago</string>
    <string name="t_days_ago">%d days ago</string>
    <string name="section_title">Title (use \"%s\" to insert topic data)</string>
</resources>